--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,19 +81,19 @@
 	<!-- error page -->
 	<error-page>
 		<exception-type>java.lang.Throwable</exception-type>
-		<location>/commons/500.jsp</location>
+		<location>/WEB-INF/error/500.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>500</error-code>
-		<location>/commons/500.jsp</location>
+		<location>/WEB-INF/error/500.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/commons/404.jsp</location>
+		<location>/WEB-INF/error/404.jsp</location>
 	</error-page>
 	<error-page>
 		<error-code>403</error-code>
-		<location>/commons/403.jsp</location>
+		<location>/WEB-INF/error/403.jsp</location>
 	</error-page>
 	
     
