--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- json -->
+		<dependency>
+    		<groupId>net.sf.json-lib</groupId>
+    		<artifactId>json-lib</artifactId>
+    		<version>2.4</version>
+    		 <classifier>jdk15</classifier>
+		</dependency>
 	</dependencies>
 
 	<repositories>
