--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-taglibs</artifactId>
+			<version>${security.version}</version>
+		</dependency>
 		<!-- JSTL标签类 -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
