--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,27 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
 	<build>
+	    <resources>  
+                <resource>  
+                    <directory>src/main/java</directory>  
+                    <includes>  
+                        <include>**/*.properties</include>  
+                        <include>**/*.xml</include>  
+                    </includes>  
+                    <!-- 是否替换资源中的属性-->  
+                    <filtering>false</filtering>  
+                </resource>  
+                <resource>  
+			     	<directory>src/main/resources</directory>
+					<includes>
+						<include>**/*.properties</include>
+						<include>**/*.xml</include>
+					</includes>
+					<filtering>false</filtering>     
+                </resource>  
+            </resources>  
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
