--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,7 @@
 	<!-- Spring和mybatis的配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/spring-mybatis.xml,
-		/WEB-INF/classes/spring-security.xml</param-value>
+		<param-value>/WEB-INF/classes/spring-mybatis.xml,/WEB-INF/classes/spring-security.xml</param-value>
 	</context-param>
 	
 	<!-- Spring监听器 -->
