--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- 文件导入 -->
+		<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
+		</dependency>
 		<!-- 日志 -->
 		<dependency>
 			<groupId>log4j</groupId>
